--- a/app/src/main/res/layout/activity_admin2.xml
+++ b/app/src/main/res/layout/activity_admin2.xml
@@ -91,7 +91,7 @@
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:layout_marginTop="10dp"
-                            android:text="Approve Pass"/>
+                            android:text="Show"/>
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -101,7 +101,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="Approve cases"
+                            android:text="Generated Pass"
                             android:padding="5dp"
                             android:textColor="@android:color/darker_gray"/>
 
