--- a/app/src/main/res/layout/activity_student2.xml
+++ b/app/src/main/res/layout/activity_student2.xml
@@ -90,6 +90,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
+                            android:id="@+id/displayIfStudent1"
                             android:layout_marginTop="10dp"
                             android:text="Pass Display"/>
                         <View
